--- a/src/ce/2023.md
+++ b/src/ce/2023.md
@@ -1,5 +1,6 @@
 ---
-title: 2022./2023.
+title: 2022./2023. m.g.
+changelog: true
 ---
 Eksāmens pārpublicēts no VIAA mājaslapas.
 
@@ -175,6 +176,7 @@ pilna masa: 1800
 degvielas veids: BG
 
 OOP 2
+
 #### 2. uzdevums (32 punkti)
 
 Norādīt izvēlēto programmēšanas valodu. _______________________
@@ -208,6 +210,7 @@ kods, kas realizē tālāk minētos uzdevumus.
 2.9. Izvadīt ekrānā objekta kubg malas garumu (1 punkts).
 
 2.10. Definēt klasi bloks (1 punkts), kura manto klasi kubs (1 punkts) un kurai ir:
+
 * īpašības:
 * privātas (1 punkts):
     * kubu skaits blokā, vesels skaitlis intervālā no 1 līdz 4 ieskaitot;
@@ -218,16 +221,16 @@ kods, kas realizē tālāk minētos uzdevumus.
 * metode (1 punkts):
     * tilpums, kura aprēķina un atgriež veselu skaitli – bloka tilpumu kubikcentimetros.
 
-2.11. Izveidot klases *bloks* konstruktoru, kas veic saņemto datu (argumentu) kontroli, izvadot atbilstošu paziņojumu, ja:
+2.11. Izveidot klases __bloks__ konstruktoru, kas veic saņemto datu (argumentu) kontroli, izvadot atbilstošu paziņojumu, ja:
 
-2.11.1. parametra *forma* vērtība neatbilst nosacījumiem (1 punkts) un uzstāda objekta parametra *derīgums* vērtību uz 0, citādi uzstāda derīguma vērtību uz 1 (1 punkts);
+2.11.1. parametra __forma__ vērtība neatbilst nosacījumiem (1 punkts) un uzstāda objekta parametra *derīgums* vērtību uz 0, citādi uzstāda derīguma vērtību uz 1 (1 punkts);
 
 2.11.2. kubu skaits blokā neatbilst nosacījumiem (1 punkts).
 
-2.12. Izveidot klases *bloks* objektu, kas sastāv no 3 oranžas krāsas kubiem ar malas garumu 5 centimetri, formas numuru 13, un piešķirt tam nosacījumiem atbilstošu nosaukumu (4 punkti).
+2.12. Izveidot klases __bloks__ objektu, kas sastāv no 3 oranžas krāsas kubiem ar malas garumu 5 centimetri, formas numuru 13, un piešķirt tam nosacījumiem atbilstošu nosaukumu (4 punkti).
 2.13. Izvadīt ekrānā izveidotā objekta nosaukumu un tilpumu (1 punkts).
 
-2.14. Izveidot klases *bloks* objektu, kas sastāv no 5 zilas krāsas kubiem ar malas garumu 7 centimetri, formas numuru 23, un piešķirt tam nosacījumiem atbilstošu nosaukumu (2 punkti).
+2.14. Izveidot klases __bloks__ objektu, kas sastāv no 5 zilas krāsas kubiem ar malas garumu 7 centimetri, formas numuru 23, un piešķirt tam nosacījumiem atbilstošu nosaukumu (2 punkti).
 
 2.15. Izvadīt ekrānā izveidotā objekta nosaukumu un derīgumu (1 punkts).
 
