--- a/src/ce/2024.md
+++ b/src/ce/2024.md
@@ -1,4 +1,336 @@
 ---
 title: 2023./2024. m.g.
 ---
-Eksāmens pārpublicēts no VIAA mājaslapas.
+Eksāmens pārpublicēts no SKOLO.lv mājaslapas.
+[Saite](https://skolo.lv/course/view.php?id=870367)
+
+# Eksāmena daļu īpatsvari un izpildei paredzētie laiki
+
+| Daļa                                               | Uzdevumu skaits | Maksimālais punktu skaits | Daļas īpatsvars, % | Izpildes laiks, min. |
+|----------------------------------------------------|-----------------|---------------------------|--------------------|-----------------------|
+| 1. Programmātūras dzīvescikls                      | 8               | 20                        | 17                 | 30                    |
+| 2. Datu bāzes izstrāde un izmantošana              | 2               | 20                        | 17                 | 40                    |
+| 3. Objektorientētā programmēšana un ārējās bibliotēkas | 1            | 38                        | 31                 | 80                    |
+| 4. Datu struktūras un programmas saskarnes         | 4               | 42 = 28 * 1,5             | 35                 | 80                    |
+| **Kopā**                                           | **15**          | **120**                   | **100**            | **230**               |
+
+
+## 1. daļa Programmatūras dzīvescikls
+
+Izlasi problēmvides aprakstu. Izmantojot doto informāciju, izpildi 1. daļas uzdevumus.
+
+Pilsētā jau ilgu laiku darbojas kafejnīcu tīkls, kas pēdējā laikā ļoti strauji sāka attīstīties. Šobrīd dati tiek glabāti dažādās vietās papīra formā, kas nenoliedzami apgrūtina biznesa datu analīzi, tāpēc uzņēmums saskata nepieciešamību izveidot centralizētu datu bāzi. Uzņēmums vēlas, lai topošajā datu bāzē būtu iespējams saglabāt, apstrādāt un izgūt datus par (iekavās ir doti datu piemēri):
+
+* kafejnīcas:
+
+    * nosaukumu (“Pie Jāņa”),
+
+    * adresi (Brīvības iela 10);
+
+* darbinieka(‑ces):
+
+    * vārdu (Jānis),
+
+    * uzvārdu (Bērziņš),
+
+    * tālruņa numuru (+37120000000),
+
+    * amatu (viesmīlis),
+
+    * kafejnīcu, kurā viņš(‑a) strādā (“Pie Jāņa”),
+
+    * norādi, vai viņš(‑a) pašlaik ir atvaļinājumā (Jā);
+
+* pasūtījuma:
+
+    * summu (249,99),
+
+    * datumu (01.04.2024.),
+
+    * aprakstu (Produkti atvēršanai),
+
+    * darbinieku(‑ci), kas šo pasūtījumu ir veicis(veikusi) (Bērziņš).
+
+
+
+### 1. uzdevums (10 punkti). Atbilstoši problēmvides aprakstam izplāno relāciju datu bāzes struktūru un izveido datu bāzi izvēlētajā datu bāzu vadības sistēmā! Uzdevuma izpildē ievēro norādītos uzdevumus!
+
+Uzdevumi:
+
+1.1.  Katrā tabulā izveido primārās atslēgas lauku. (1 punkts)
+
+1.2.  Katram laukam tabulā izvēlies piemērotāko datu tipu. (3 punkti)
+
+1.3.  Starp tabulām izveido atbilstošu tipu relācijas. (2 punkti)
+
+1.4.  Katru tabulu aizpildi vismaz ar trīs ierakstiem. (3 punkti)
+
+1.5.  Tabulu un lauku nosaukumus veido, ievērojot labās prakses principus. (1 punkts)
+
+### 2. uzdevums (10 punkti). Izveido piecus SQL vaicājumus, kas sniedz šādu informāciju!
+
+2.1. Darbinieki, kas pašlaik ir atvaļinājumā. (2 punkti)
+
+2.2. Pasūtījumu kopējais skaits. (2 punkti)
+
+2.3. Katra darbinieka pasūtījumu kopējais skaits. (2 punkti)
+
+2.4. Katra darbinieka pasūtījumu vislielākā summa. (2 punkti)
+
+2.5. Katras kafejnīcas pasūtījumu vidējā summa. (2 punkti)
+
+
+## 2. daļa Datu bāzes izstrāde un izmantošana 
+
+__Izlasi problēmvides aprakstu. Izmantojot doto informāciju, izpildi 2. daļas uzdevumus.__
+
+Pilsētā jau ilgu laiku darbojas kafejnīcu tīkls, kas pēdējā laikā ļoti strauji sāka attīstīties. Šobrīd dati tiek glabāti dažādās vietās papīra formā, kas nenoliedzami apgrūtina biznesa datu analīzi, tāpēc uzņēmuma vadība ir izteikusi vēlmi ieviest vienu programmatūras risinājumu, kas minimāli apmierinātu norādītās prasības.
+
+__1. prasība:__ Vadība vēlas publicēt informatīvus ziņojumus iekšējās saziņas kanālos.
+
+__2. prasība:__ Menedžeri vēlas veikt darbinieku nostrādāto stundu uzskaiti.
+
+__3. prasība:__ Klienti vēlas veikt pirkumus un norēķināties par tiem bezskaidrā naudā.
+
+__4. prasība:__ Klienti vēlas rezervēt galdiņus sev vēlamā laikā.
+
+
+### 1. uzdevums (2 punkti). Ņemot vērā norādītās prasības, identificē četras iesaistītās puses topošajā programmatūras risinājumā! Katrai iesaistītajai pusei noformulē vēl vienu iespējamo prasību – papildu funkcionalitāti, kas varētu būt nepieciešama šai pusei!
+
+Sniedzot atbildi, izmanto šādu formu:
+
+1. iesaistītā puse: ____________________________________
+
+Papildu funkcionalitāte: _______________________________
+
+2. iesaistītā puse: ____________________________________
+
+Papildu funkcionalitāte: _______________________________
+
+3. iesaistītā puse: ____________________________________
+
+Papildu funkcionalitāte: _______________________________
+
+4. iesaistītā puse: ____________________________________
+
+Papildu funkcionalitāte: _______________________________
+
+
+
+
+### 2. uzdevums (4 punkti). Katrai norādītajai prasībai noformulē mērķauditoriju, kas tiks iesaistīta attiecīgās prasības izpētē! Katrai prasībai izvēlies arī vienu piemērotāko izpētes metodi, ar kuras palīdzību varētu izpētīt šo prasību!
+
+__Sniedzot atbildi, izmanto šādu formu:__
+
+1. prasības mērķauditorija: _____________________________
+
+Izpētes metode: _____________________________________
+
+2. prasības mērķauditorija: _____________________________
+
+Izpētes metode: _____________________________________
+
+3. prasības mērķauditorija: _____________________________
+
+Izpētes metode: _____________________________________
+
+4. prasības mērķauditorija: _____________________________
+
+Izpētes metode: _____________________________________
+
+
+
+
+### 3. uzdevums (3 punkti). Ņemot vērā problēmvides aprakstu, noformulē programmatūras izstrādātājiem trīs darba uzdevumus, pēc kuru izpildes būtu iespējams automatizēt kafejnīcu tīkla darbības procesus!
+
+__Sniedzot atbildi, izmanto šādu formu:__
+
+1. darba uzdevums: _________________________________________
+
+2. darba uzdevums: _________________________________________
+
+3. darba uzdevums: _________________________________________
+
+
+
+
+### 4. uzdevums (3 punkti). Ņemot vērā problēmvides aprakstu, izvēlies topošā programmatūras risinājuma izstrādei piemērotāko programmatūras izstrādes modeli! Pamato savu izvēli, atbildē iekļaujot izvēlētā izstrādes modeļa raksturīgās īpašības un tipiskos izmantošanas gadījumus!
+____________________________________________________________________________________________________________
+
+____________________________________________________________________________________________________________
+
+
+### 5. uzdevums (8 punkti). Piedāvā topošā programmatūras risinājuma divus dažādus īstenošanas variantus! Īsi apraksti katru variantu, kā arī katram variantam izvēlies piemērotāko izvietošanas veidu1, programmēšanas valodu un koda redaktoru!
+
+Sniedzot atbildi, izmanto šādu formu:
+
+1. variants:
+
+Īss apraksts: ___________________________________________________________________________________________________
+
+___________________________________________________________________________________________________
+
+Izvietošanas veids: _______________________________________________________________________________________________
+
+
+Programmēšanas valoda: ____________________________________
+
+
+Koda redaktors: ___________________________________________
+
+
+2. variants:
+
+Īss apraksts: _____________________________________________
+
+______________________________________________________
+
+______________________________________________________
+
+Izvietošanas veids: _________________________________________
+
+______________________________________________________
+
+Programmēšanas valoda: ____________________________________
+
+Koda redaktors: ___________________________________________
+
+
+Izvietošanas veids – veids, kādā tiek izvietots programmatūras risinājums, t. i., kāda infrastruktūra, platformas, tehnoloģijas, rīki utt. tiek izmantoti risinājuma izvēršanā un uzturēšanā.
+
+## 3. daļa Objektorientētā programmēšana un ārējās bibliotēkas
+
+### 1. uzdevums (11 punkti)
+
+Izvēlētajā programmēšanas valodā izveido programmu ar vienu klasi, kas ļaus saglabāt un apstrādāt datus par veselības aprūpes iestādi – doktorātu! Ievadi datus no konsoles un izdrukā konsolē! Datu ievadē un izvadē ievēro norādītos piemērus!
+
+Klasei ir jāsatur __vismaz divi atribūti__, kas glabā:
+
+    * doktorāta nosaukumu,
+    * doktorāta pacientu skaitu.
+
+Klasei ir jāsatur __vismaz divas metodes__, kas:
+
+    * no konsoles ļauj ievadīt atribūtu vērtības un saglabāt tās,
+    * konsolē izdrukā (sk. izvades piemēru) ievadītos datus.
+
+
+
+__Ievades piemērs (treknrakstā izcelto ievada lietotājs)__:
+
+Ievadiet doktorāta nosaukumu: __Augstkalne__
+
+Ievadiet doktorāta pacientu skaitu: __325__
+
+
+
+__Izvades piemērs:__
+
+Doktorāts Augstkalne apkalpo 325 pacientus.
+
+### 2. uzdevums (27 punkti)
+
+Izvēlētajā programmēšanas valodā izveido programmu, kas ļaus saglabāt un apstrādāt datus par dažādiem skolotājiem – sākumskolas un vidusskolas skolotājiem! Ievēro nosacījumu, ka sākumskolas skolotājs pasniedz tikai vienā konkrētā klasē visus priekšmetus, bet vidusskolas skolotājs māca divus priekšmetus vidusskolas klasēm! Ievadi datus no konsoles un izdrukā konsolē! Datu ievadē un izvadē ievēro norādītos piemērus!
+
+Programmai ir jāsatur:
+
+2.1. Bāzes klase Skolotajs, kas ļaus saglabāt informāciju par visu tipu skolotājiem un kas iekļauj:
+
+    2.1.1. Atribūtu – stundu skaitu nedēļā;
+    2.1.2. Atribūtu – skolotāja tipu, kam vēlāk tiks piešķirta skaitliska vērtība 
+    atkarībā no atvasinātās klases (sākumskolas skolotājs – vērtība “1”, vidusskolas skolotājs – vērtība “3”);
+    2.1.3. Arī citas papildu metodes un atribūtus, ja tādi ir nepieciešami;
+
+2.2. No bāzes klases atvasinātā klase SakumskolasSkolotajs, kas ļaus saglabāt informāciju par sākumskolas skolotāju un kas iekļauj:
+
+    2.2.1. Metodi, kas izdrukā (sk. izvades piemēru) skolotāja tipu, uzvārdu un pasniegto stundu skaitu konkrētā klasē;
+    2.2.2. Arī citas papildu metodes un atribūtus, ja tādi ir nepieciešami;
+
+2.3. No bāzes klases atvasinātā klase VidusskolasSkolotajs, kas ļaus saglabāt informāciju par vidusskolas skolotāju un kas iekļauj:
+
+    2.3.1. Atribūtu – pirmā priekšmeta nosaukumu;
+    2.3.2. Atribūtu – otrā priekšmeta nosaukumu;
+    2.3.3. Atribūtu – abu priekšmetu stundu kopskaitu nedēļā;
+    2.3.4. Metodi, kas aprēķina, cik stundas kopā abos priekšmetos pasniedz skolotājs;
+    2.3.5. Metodi, kas izdrukā (sk. izvades piemēru) skolotāja tipu, uzvārdu, pasniegto priekšmetu nosaukumus un kopējo stundu skaitu abos priekšmetos;
+    2.3.6. Arī citas papildu metodes un atribūtus, ja tādi ir nepieciešami.
+
+
+
+Ievades piemērs (treknrakstā izcelto ievada lietotājs):
+
+Ievadiet sākumskolas skolotāja uzvārdu: Bērziņš
+
+Ievadiet skolotāja klasi: 2.a
+
+Ievadiet skolotāja stundu skaitu: 15
+
+Ievadiet vidusskolas skolotāja uzvārdu: Ozols
+
+Ievadiet pirmo pasniegto priekšmetu: matemātika
+
+Ievadiet pirmā priekšmeta stundu skaitu: 12
+
+Ievadiet otro pasniegto priekšmetu: datorika
+
+Ievadiet otrā priekšmeta stundu skaitu: 8
+
+
+
+Izvades piemērs:
+
+Sākumskolas (tips – 1) skolotājs Bērziņš māca 15 stundas 2.a klasē.
+
+Vidusskolas (tips – 3) skolotājs Ozols māca šādus priekšmetus: matemātika un datorika, kopā 20 stundas.
+
+## 4. daļa Datu struktūras un programmas saskarnes
+
+### 1. uzdevums (12 punkti)
+
+__Izlasi tekstu un izpildi uzdevumu.__
+
+Digitālais aģents vieglā un saprotamā veidā nodod informāciju sabiedrībai, tai skaitā konsultē par drošu darbošanos internetā, iedrošina un palīdz uzsākt valsts e‑pakalpojumu lietošanu, lai persona aktuālo dzīves situāciju varētu atrisināt digitālā veidā, piemēram, ar bērna gaidīšanu un piedzimšanu saistītie jautājumi, dzīvesvietas maiņa, rīcība saslimšanas gadījumā. Tāpat digitālie aģenti sniedz atgriezenisko saikni e‑pārvaldei, kā uzlabot valsts saziņu ar iedzīvotājiem.
+
+Datnē __agenti.csv__ (dati iegūti no data.gov.lv) apkopota informācija par vietām (iestādes tips, nosaukums, adrese), kurās meklēt sev tuvāko digitālo aģentu. Izmantojot šo datni, izveido programmu, kurā __secīgi__ izpildīti visi dotie uzdevumi!
+
+__Uzdevumi:__
+
+1. Lejupielādē, atver datni un datu struktūrā saglabā datus turpmākai izmantošanai. (2 punkti)
+
+2. Balstoties uz kolonnu “TIPS”, nofiltrē nederīgos datus, proti, ir jāpaliek tikai datiem, kas atbilst jebkuram no šiem tipiem: (3 punkti)
+    * Izglītības iestāde;
+    * Valsts iestāde.
+
+3. Atlasi tikai tādu iestāžu nosaukumus un adreses, kas atrodas Rīgā. (3 punkti)
+
+4. Sakārto datus pēc kolonnas “NOSAUKUMS” alfabēta secībā. (2 punkti)
+
+5. Pēc katra uzdevuma izpildes pārskatāmi izvadi iegūto rezultātu. (2 punkti)
+
+
+
+
+### 2. uzdevums (16 punkti)
+
+Pēc dotās saites __https://restcountries.com/v3.1/all__ ir pieejams API, kas sniedz dažāda veida datus par valstīm visā pasaulē. Izmantojot šo API, izveido programmu, kurā izpildīti visi dotie uzdevumi!
+
+__Uzdevumi:__
+
+1. Izveido pieprasījumu uz doto API. (1 punkts)
+
+2. Pārbaudi, vai no servera ir saņemta korekta atbilde. (1 punkts)
+
+3. Iegūsti un izvadi visu valstu vispārpieņemtos nosaukumus (“name” → “common”). (2 punkti)
+
+4. Iegūsti un izvadi kopējo valstu skaitu. (2 punkti)
+
+5. Iegūsti un izvadi visu valstu vidējo iedzīvotāju skaitu (“population”). (2 punkti)
+
+6. Iegūsti un izvadi valsti ar vislielāko iedzīvotāju skaitu. (2 punkti)
+
+7. Iegūsti un izvadi visu valstu kopējo platību (“area”). (2 punkti)
+
+8. Iegūsti un izvadi informāciju par Latvijas:
+
+    * apakšreģionu (“subregion”); (2 punkti)
+    * robežvalstu kodiem (“borders”). (2 punkti)
